test/libsolidity/syntaxTests/inheritance/final_modifier/final_method_library.sol
library I {
    function f() external final;
}
// ----
// TypeError: (16-44): Library function cannot be declared final.
